--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nan": "^2.4.0",
     "restify": "^4.3.0",
     "restify-plugins": "^1.4.0",
+    "util": "^0.10.3",
     "uuid": "^3.0.1",
     "winston": "^2.3.0"
   }
